music player correction

--- a/music-player.html
+++ b/music-player.html
@@ -10,7 +10,7 @@
 <body class="main">
    
     <div>
-        <h3>Music play designed by <a style="text-decoration: none; color: green; " href="https://www.kaypat.dev">Kaypat.dev</a></h3> <br> <h3>Version 1</h3>
+        <h3>Music player designed by <a style="text-decoration: none; color: green; " href="https://www.kaypat.dev">Kaypat.dev</a></h3> <br> <h3>Version 1</h3>
     </div>
     <div class="container">
         <div class="music-player">
