--- a/music-player.html
+++ b/music-player.html
@@ -6,6 +6,8 @@
     <title>Music player</title>
     <link rel="stylesheet" href="/loader.css">
     <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
 </head>
 <body class="main">
    
@@ -13,8 +15,8 @@
         <h3>Music player designed by <a style="text-decoration: none; color: green; " href="https://www.kaypat.dev">Kaypat.dev</a></h3> <br> <h3>Version 1</h3>
     </div>
     <div class="container">
-        <div class="music-player">
-            <img src="/FullSizeRender.jpg" alt="" class="songImg">
+        <div class="music-player animate__animated animate__bounce">
+            <img  src="/FullSizeRender.jpg" alt="" class="songImg">
             <h2>Unconditionally</h2>
             <p>Olamide ft Perruzi</p>
             <audio src="/Olamide_ft_Peruzzi_-_Unconditionally.mp3" id="audio" type="audio/mp3"></audio>
